[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/scenes/houses/house_base.gd" type="Script" id=1]

[node name="house_base" type="YSort" groups=["terrain"]]
script = ExtResource( 1 )

[node name="house" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="Polygon2D" type="Polygon2D" parent="house"]
z_index = -1

[node name="interior" type="Sprite" parent="house"]
z_index = -1

[node name="exterior" type="Sprite" parent="house"]

[node name="area_detection" type="Area2D" parent="house"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="house/area_detection"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="house"]

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="house/area_detection" to="." method="_on_area_detection_body_entered"]
[connection signal="body_exited" from="house/area_detection" to="." method="_on_area_detection_body_exited"]
